Changes for 3.0.5rc1

New features:
...G...... [ZBXNEXT-3389] removed value length limitation in zabbix_sender when reading data from file/stream (wiper)

Bug fixes:
.......PS. [ZBX-8489] removed ODBC request answer size limitation (viktors, wiper)
........S. [ZBX-10830] fixed SNMP trap to convert non-printable values from SNMPv3 to hexadecimal (viktors, zalex_ua)
..F....... [ZBX-11071] fixed closing success and error messages in IE (Cemeris)
........S. [ZBX-11124] fixed memory leak in process of deleting hosts, which occurs during lld processing (Sergejs)
.......P.. [ZBX-11109] fixed processing of parameter HousekeepingFrequency=0 in proxy (Sergejs)
........S. [ZBX-11099] reduced configuration cache lock time after host maintenance ends (wiper)
........S. [ZBX-9413] fixed disabled hosts linking to a maintenance (Sergejs)
...G...PS. [ZBX-11100] fixed minor bugs and use of magic numbers in IP range parsers (Sergejs)
........S. [ZBX-11072] fixed problem with string truncation for IBM DB2 databases which contain the char '\r' (Sergejs)
....I..... [ZBX-11081] fixed compilation error with curl library (Sergejs)
..F....... [ZBX-10901] added missing highlighting for some UI elements in focused state (asaveljevs, Pavel)
..F....... [ZBXNEXT-3351] decreased padding in screens to make them more compact (asaveljevs, Pavel)
........S. [ZBX-11059] fixed duplicate notifications sending from one media type (Sergejs)
....I..PS. [ZBX-11073] fixed compilation with Net-SNMP library support (gleb)
..F....... [ZBX-10263] fixed incorrect record count in getPagingLine() when search limit is reached (Cemeris)
..F....... [ZBX-10621] fixed hanging of dragged widget while updating content (Alexei)
..F....... [ZBX-10621] removed excessive white space in dashboard (Alexei, Pavel)
........S. [ZBX-10713] fixed incorrect macro {ESC.HISTORY} that gathers history about one event to different actions (Sergejs)